[gd_scene load_steps=13 format=3 uid="uid://cccv7ecmrvfyd"]

[ext_resource type="Script" path="res://assets/scripts/Coin Physics.gd" id="1_jr64x"]
[ext_resource type="Script" path="res://assets/scripts/Coin Detector.gd" id="2_nq4ii"]
[ext_resource type="Texture2D" uid="uid://cpa6nvc021dj1" path="res://assets/sprites/Coin animation.png" id="2_uu142"]
[ext_resource type="AudioStream" uid="uid://c4iouo8beh6o" path="res://assets/sound effects/coin 1.mp3" id="4_ne854"]
[ext_resource type="AudioStream" uid="uid://76lsmjt883cb" path="res://assets/sound effects/coin 2.mp3" id="5_6a17l"]
[ext_resource type="AudioStream" uid="uid://bf8bwoi15qx3u" path="res://assets/sound effects/coin 3.mp3" id="6_rosou"]
[ext_resource type="AudioStream" uid="uid://cmi1kyryficxq" path="res://assets/sound effects/coin 4.mp3" id="7_0p0jg"]

[sub_resource type="Animation" id="Animation_msnr2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Coin Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_uu142")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Coin Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Coin Sprite:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Coin Sprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_3bxgj"]
resource_name = "Spinning"
length = 0.95
loop_mode = 1
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Coin Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.225, 0.425, 0.675, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Coin Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_uu142")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Coin Sprite:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Coin Sprite:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jo8vg"]
_data = {
"RESET": SubResource("Animation_msnr2"),
"Spinning": SubResource("Animation_3bxgj")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_wx5gs"]

[sub_resource type="CircleShape2D" id="CircleShape2D_peu2m"]

[node name="Coin" type="CharacterBody2D" groups=["Coin"]]
collision_mask = 16
script = ExtResource("1_jr64x")
metadata/_edit_group_ = true

[node name="Coin Sprite" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("2_uu142")
hframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Spinning"
libraries = {
"": SubResource("AnimationLibrary_jo8vg")
}

[node name="Coin Hit Box" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_wx5gs")

[node name="Coin Detector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 66
script = ExtResource("2_nq4ii")

[node name="Coin Detector Box" type="CollisionShape2D" parent="Coin Detector"]
shape = SubResource("CircleShape2D_peu2m")

[node name="coin1" type="AudioStreamPlayer2D" parent="Coin Detector"]
stream = ExtResource("4_ne854")

[node name="coin2" type="AudioStreamPlayer2D" parent="Coin Detector"]
stream = ExtResource("5_6a17l")

[node name="coin3" type="AudioStreamPlayer2D" parent="Coin Detector"]
stream = ExtResource("6_rosou")

[node name="coin4" type="AudioStreamPlayer2D" parent="Coin Detector"]
stream = ExtResource("7_0p0jg")

[connection signal="area_entered" from="Coin Detector" to="." method="_on_coin_detector_area_entered"]
[connection signal="body_entered" from="Coin Detector" to="Coin Detector" method="_on_body_entered"]
[connection signal="body_exited" from="Coin Detector" to="." method="_on_coin_detector_body_exited"]
